@@ -393,6 +393,7 @@ int widget_init( void )
   ui_menu_activate( UI_MENU_ITEM_MACHINE_PROFILER, 0 );
   ui_menu_activate( UI_MENU_ITEM_RECORDING, 0 );
   ui_menu_activate( UI_MENU_ITEM_RECORDING_ROLLBACK, 0 );
+  ui_menu_activate( UI_MENU_ITEM_TAPE_RECORDING, 0 );
 
   return 0;
 }
